tooling/nargo_cli/tests/snapshots/execution_success/cast_bool/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _4",
    "private parameters indices : [_0, _1]",
    "public parameters indices : []",
    "return value indices : []",
    "EXPR [ (1, _0) (-1, _1) (-1, _2) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _2) 0 ]], outputs: [_3]",
    "EXPR [ (1, _2, _3) (1, _4) -1 ]",
    "EXPR [ (1, _2, _4) 0 ]",
    "EXPR [ (1, _4) -1 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(21), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(20), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(21), offset_address: Direct(20) }, Const { destination: Direct(2), bit_size: Field, value: 0 }, BinaryFieldOp { destination: Direct(3), op: Equals, lhs: Direct(0), rhs: Direct(2) }, JumpIf { condition: Direct(3), location: 8 }, Const { destination: Direct(1), bit_size: Field, value: 1 }, BinaryFieldOp { destination: Direct(0), op: Div, lhs: Direct(1), rhs: Direct(0) }, Stop { return_data: HeapVector { pointer: Direct(20), size: Direct(21) } }]"
  ],
  "debug_symbols": "nZFNCsMgEIXvMmsX+WtIc5VSgjGTIIiK0UIJuXsnEttkUSjdzDjz/HzwXGDAPkyd1KOZob0t0DuplJw6ZQT30mjaLiuDNHbeIdIKDjpRljvUHlodlGLw4CrES7PlOnbPHakZA9QDdXpwlAq308o+dPYdrYqdrZo3fPmZrhNdX/+gm0Q3Z+87TVxId8oKMmhzBnmsRaxlrBW05bqZOMl7hXuuY9DiELN/2qSkj7DOCByCw80mamT8Ag==",
  "file_map": {
    "50": {
      "source": "fn main(x: Field, y: Field) {\n    let z = x == y;\n    let t = z as u8;\n    assert(t == 1);\n}\n",
      "path": ""
    }
  },
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
